--- a/.gitignore
+++ b/.gitignore
@@ -26,22 +26,57 @@ build/
 *.pyo
 *.sqlite3
 db.sqlite3
+local_settings.py
+instance/
+.webassets-cache
 
 # Media and static files
 media/
 staticfiles/
+static/
 
 # Local environment variables
 .env
+.env.local
+.env.*.local
 
 # IDEs and editors
 .vscode/
 .idea/
 *.swp
 *.swo
+.project
+.pydevproject
+.settings/
 
 # macOS
 .DS_Store
+.AppleDouble
+.LSOverride
 
 # Windows
 Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Testing
+.coverage
+htmlcov/
+.pytest_cache/
+.tox/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Temporary files
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
